--- a/registry_browser/registry_browser/appsettings.json
+++ b/registry_browser/registry_browser/appsettings.json
@@ -3,6 +3,11 @@
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
+    },
+    "Registry": {
+      "Url": "test",
+      "User": "usertest",
+      "Password":  "pw_test" 
     }
   }
 }
