Using user secrets, using env vars, better doc

--- a/registry_browser/registry_browser/Properties/launchSettings.json
+++ b/registry_browser/registry_browser/Properties/launchSettings.json
@@ -17,9 +17,9 @@
     },
     "registry_browser": {
       "commandName": "Project",
+      "commandLineArgs": "/Registry:Url=https://registry.comma-soft.net",
       "launchBrowser": true,
       "environmentVariables": {
-        "Registry__Url": "https://registry.comma-soft.net",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:52798"
