--- a/registry_browser/registry_browser/appsettings.json
+++ b/registry_browser/registry_browser/appsettings.json
@@ -5,9 +5,9 @@
       "Default": "Warning"
     },
     "Registry": {
-      "Url": "test",
-      "User": "usertest",
-      "Password":  "pw_test" 
+      "Url": "",
+      "User": "",
+      "Password":  "" 
     }
   }
 }
