reworked logging tro core 2. Registry still missing

--- a/registry_browser/registry_browser/appsettings.Development.json
+++ b/registry_browser/registry_browser/appsettings.Development.json
@@ -5,6 +5,11 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
-    }
+    },
+    "Registry": {
+      "Url": "https://hub.docker.com/",
+      "User": "christiansauer",
+      "Password":  "TEST123" 
+    },
   }
 }
