set Registry again

--- a/registry_browser/registry_browser/appsettings.Development.json
+++ b/registry_browser/registry_browser/appsettings.Development.json
@@ -5,11 +5,11 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
-    },
+    }
+  },
     "Registry": {
-      "Url": "https://hub.docker.com/",
+      "Url": "",
       "User": "christiansauer",
-      "Password":  "TEST123" 
-    },
-  }
+      "Password":  "TEST1233" 
+    }
 }
