using /config/appsettings.json for config #11

--- a/registry_browser/registry_browser/appsettings.Development.json
+++ b/registry_browser/registry_browser/appsettings.Development.json
@@ -9,7 +9,7 @@
   },
     "Registry": {
       "Url": "",
-      "User": "christiansauer",
-      "Password":  "TEST1233" 
+      "User": "",
+      "Password":  "" 
     }
 }
